--- a/index.html
+++ b/index.html
@@ -8,33 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>here is the </h1>
   
 
-<div id="parent">
-
-     < div id="child">
-
-    <h1>i ma h1 tag</h1>
-    <h2>i am h2 tag</h2>
-     </div>
 
 
-    <div id="child2">
-
-    <h1>i am h1 tag</h1>
-    <h2>i am h2 tag</h2>
-    </div>
-
-</div>
 
 
-<div id="root"></div>
-
-
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script src="app.js">
+<!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+<script type="module" src="app.js">
 
 </script>
 </body>
